--- a/app/globals.css
+++ b/app/globals.css
@@ -11,9 +11,13 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --background-start-rgb: 26, 22, 28;
+    --background-end-rgb: 26, 22, 28;
   }
+}
+
+html {
+  scroll-behavior: smooth!important;
 }
 
 body {
@@ -24,6 +28,16 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+  }
+
+h1 {
+  font-size: 4rem;
+  font-weight: 300;
+}
+
+h2 {
+  font-size: 1.5rem;
+  font-weight: 200;
 }
 
 @layer utilities {
