--- a/app/globals.css
+++ b/app/globals.css
@@ -4,17 +4,15 @@
 
 :root {
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --background-rgb: 255, 250, 250;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 26, 22, 28;
-    --background-end-rgb: 26, 22, 28;
+    --foreground-rgb: 255, 250, 250;
+    --background-rgb: 26, 22, 28;
   }
-}
+} */
 
 html {
   scroll-behavior: smooth!important;
@@ -22,22 +20,17 @@ html {
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background:
+    rgb(var(--background-rgb));
   }
+  
 
 h1 {
   font-size: 4rem;
-  font-weight: 300;
 }
 
 h2 {
   font-size: 1.5rem;
-  font-weight: 200;
 }
 
 @layer utilities {
