--- a/app/globals.css
+++ b/app/globals.css
@@ -27,14 +27,24 @@ body {
 
 h1 {
   font-size: 4rem;
+  font-weight: 700;
 }
 
 h2 {
-  font-size: 3rem;
+  font-size: 2.5rem;
+  font-weight: 200;
+  opacity: 0.6;
 }
 
 h3 {
   font-size: 1.5rem;
+  font-weight: 200;
+  opacity: 0.8;
+}
+
+h4 {
+  font-size: 2.5rem;
+  font-weight: 1000;
 }
 
 @layer utilities {
